# spotifm

./: .gitignore  Cargo.toml  README.md  config.env.example  config.json.example  discordbot.json.example  docker-compose.yml  ircbot.json.example
docker/: config.env  docker-compose.yml
docker/build-spotify-fm/: Dockerfile  build.sh
docker/builder/: Dockerfile  build.sh
docker/discordbot/: Dockerfile  index.js  package.json
docker/ircbot/: Dockerfile  index.js  package.json
docker/streamer/: Dockerfile  darkice.cfg  elevenlabs.sh  entrypoint.sh  keepalive.sh
etc/: darkice.cfg  icecast.xml  pulse.liq
src/: announce.rs  backend.rs  config.rs  db.rs  main.rs  mixer.rs  rest.rs  signals.rs
