[package]
name = "spotify-fm"
version = "1.0.0"
authors = ["malcom"]
license = "GPL"
description = "stream spotify via icecast"
keywords = ["spotify"]
repository = "https://github.com/anatolybazarov/spotify-fm"
readme = "README.md"
edition = "2021"

[workspace]

[[bin]]
name = "spotify-fm"
path = "src/main.rs"
doc = false

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "process"] }
acid-store = { version = "0.12.1", features = ["store-directory"] }
signal-hook = "*"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde_derive = "1"
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
serde = "1.0.106"
serde_json = "1.0.51"
env_logger = "0.7.1"
chrono = "*"
iconv = "*"

[dependencies.librespot]
version = "0.4.1"
features = ["pulseaudio-backend"]

[dependencies.rspotify]
version = "0.11.5"
default-features = false
features = ["client-ureq", "ureq-rustls-tls", "cli"]
