[package]
name = "spotifm"
version = "1.3.0"
authors = ["anatolybazarov"]
license = "GPL"
description = "stream spotify via icecast"
keywords = ["spotify"]
repository = "https://github.com/anatolybazarov/spotifm"
readme = "README.md"
edition = "2021"

[workspace]

[[bin]]
name = "spotifm"
path = "src/main.rs"
doc = false

[dependencies]
tokio = { version = "1", features = ["macros", "signal", "sync", "process"] }
signal-hook = "*"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde_derive = "1"
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
serde = "1.0.106"
serde_json = "1.0.51"
env_logger = "0.7.1"
chrono = "*"
iconv = "*"
rand = "*"

[dependencies.librespot]
version = "0.4.1"
features = ["pulseaudio-backend"]

[dependencies.rspotify]
version = "0.11.5"
default-features = false
features = ["client-ureq", "ureq-rustls-tls"]
